plugins {
    id 'java-library'
}
apply plugin: 'maven-publish'
def buildNumber = System.getenv("GITHUB_RUN_NUMBER") != null ? System.getenv("GITHUB_RUN_NUMBER") : "0";
version = "SNAPSHOT." + buildNumber
group = "com.eliotlash.molang"
def repsyUrl = project.repsyUrl
java.toolchain.languageVersion = JavaLanguageVersion.of(17)

repositories {
	mavenCentral()
}

dependencies {
	implementation 'com.google.code.gson:gson:2.8.9'

	implementation group: 'it.unimi.dsi', name: 'fastutil', version: '8.5.6'


	// Use JUnit test framework
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
	testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
}

test {
	useJUnitPlatform()
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact jar
//            artifact packageSources
//            artifact packageJavadoc
            artifactId = archivesBaseName
        }
    }
    repositories {
        maven {
            url repsyUrl
            credentials {
                def envUsername = System.getenv("repsyUsername")
                def envPassword = System.getenv("repsyPassword")
                username = envUsername == null ? findProperty("repsyUsername") : envUsername
                password = envPassword == null ? findProperty("repsyPassword") : envPassword
            }
        }
    }
}
